--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.839.0",
+    "@aws-sdk/lib-storage": "^3.840.0",
     "aws-sdk": "^2.1578.0",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
